@@ -37,9 +37,6 @@ class VideoDialog(gtk.FileChooserDialog):
         self.add_button(gtk.STOCK_CANCEL, gtk.RESPONSE_CANCEL)
         self.add_button(_("_Select"), gtk.RESPONSE_OK)
         self.set_default_response(gtk.RESPONSE_OK)
-        if all(gaupol.gtk.conf.open_dialog.size):
-            self.set_default_size(*gaupol.gtk.conf.open_dialog.size)
-        gaupol.gtk.util.connect(self, self, "response")
         self._init_filters()
 
     def _init_filters(self):
@@ -55,8 +52,3 @@ class VideoDialog(gtk.FileChooserDialog):
         file_filter.set_name(_("Video files"))
         self.add_filter(file_filter)
         self.set_filter(file_filter)
-
-    def _on_response(self, dialog, response):
-        """Save dialog size."""
-
-        gaupol.gtk.conf.open_dialog.size = self.get_size()
